# PyVideoEditor

./: .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini
data/: README.md
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  veditor-utils-image_utils-1.py  veditor-utils-image_utils-2.py  veditor-utils-image_utils-4.py  veditor-utils-image_utils-5.py  veditor-utils-video_utils-1.py  veditor.cli.check_clip_locations.html  veditor.cli.cvui.html  veditor.cli.html  veditor.cli.main.html  veditor.editor.html  veditor.elements.animation.html  veditor.elements.base.html  veditor.elements.html  veditor.elements.image.html  veditor.elements.text.html  veditor.elements.video.html  veditor.html  veditor.utils.argparse_utils.html  veditor.utils.audio_utils.html  veditor.utils.color_utils.html  veditor.utils.download_utils.html  veditor.utils.generic_utils.html  veditor.utils.html  veditor.utils.image_utils.html  veditor.utils.video_utils.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  modules.rst.txt  veditor.cli.check_clip_locations.rst.txt  veditor.cli.cvui.rst.txt  veditor.cli.main.rst.txt  veditor.cli.rst.txt  veditor.editor.rst.txt  veditor.elements.animation.rst.txt  veditor.elements.base.rst.txt  veditor.elements.image.rst.txt  veditor.elements.rst.txt  veditor.elements.text.rst.txt  veditor.elements.video.rst.txt  veditor.rst.txt  veditor.utils.argparse_utils.rst.txt  veditor.utils.audio_utils.rst.txt  veditor.utils.color_utils.rst.txt  veditor.utils.download_utils.rst.txt  veditor.utils.rst.txt  (+3 more)
tests/: README.md  _generate_all_templates.py  conftest.py  data.py
veditor/: __init__.py  __meta__.py  editor.py
(+44 files in other folders)
